--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
+__pycache__
+host_win32/build
+react-web/build
+data/id.txt
+data/location.txt
+data/wifi.txt
