--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
+.vscode/extensions.json
+.vscode/settings.json
 __pycache__
 host_win32/build
 react-web/build
