--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,8 @@ monitor_speed=115200
 monitor_filters = esp32_exception_decoder
 build_unflags = -std=gnu++11
 build_flags = -std=gnu++17 
+    -DLEGACY_I2C ; doesn't seem to work with the new drivers
     -Wall 
-    -DLEGACY_I2C
     -DCAPTIVE_PORTAL_SSID=WeatherStation
 upload_port = COM4
 monitor_port = COM4
