tried to update to new i2c. devices don't work with it

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,10 @@ monitor_speed=115200
 monitor_filters = esp32_exception_decoder
 build_unflags = -std=gnu++11
 build_flags = -std=gnu++17 
-    -DLEGACY_I2C ; doesn't seem to work with the new drivers
     -Wall 
     -DCAPTIVE_PORTAL_SSID=WeatherStation
+    -DLEGACY_I2C ; doesn't seem to work with the new drivers
+    ;-DVERBOSE
+    
 upload_port = COM4
 monitor_port = COM4
