pin platform version
- was automatically picking 6.10.0, downgrading the ESP-IDF version to 5.4.0.

--- a/platformio.ini
+++ b/platformio.ini
@@ -2,7 +2,7 @@
 boards_dir=boards
 
 [env:inkplate10]
-platform = espressif32
+platform = espressif32@6.11.0
 board = inkplate10
 framework = espidf
 lib_deps = codewitch-honey-crisis/htcw_uix
