--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,9 @@
 .vscode/settings.json
 __pycache__
 host_win32/build
-react-web/build
+web/build
 data/id.txt
 data/location.txt
 data/wifi.txt
 .vscode/arduino.json
+web/node_modules
